Added enable preview for windows build_app.bat